--- a/index.html
+++ b/index.html
@@ -31,6 +31,34 @@
 				</nav>
 			</div>
 		</header>
+		<main class="page">
+			<div class="page__main-block main-block">
+				<div class="main-block__container _container">
+					<div class="main-block__body">
+						<h1 class="main-block__title">
+							Finance and Consultancy Solution
+						</h1>
+						<div class="main-block__text">
+							We know how large objects will act, but things on a small scale.
+						</div>
+						<div class="main-block__buttons">
+							<a href="" class="main-block__button block__button-orange">
+								Get Quote Now
+							</a>
+							<a href="" class="main-block__button block__button-border">
+								Learn More
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="main-block__image _ibg">
+					<img src="img/mainblock/cover.jpg" alt="cover">
+				</div>
+			</div>
+		</main>
+		<footer class="footer">
+			Footer
+		</footer>
 	</div>
 	<script src="js/script.js"></script>
 </body>
