--- a/index.html
+++ b/index.html
@@ -50,11 +50,57 @@
 							</a>
 						</div>
 					</div>
-				</div>
-				<div class="main-block__image _ibg">
-					<img src="img/mainblock/cover.jpg" alt="cover">
+					<div class="main-block__image _ibg">
+						<img src="img/mainblock/cover.jpg" alt="cover">
+					</div>
 				</div>
 			</div>
+			<section class="page__sevices services">
+				<div class="services__container _container">
+					<div class="services__body">
+						<div class="services__column">
+							<div class="services__item item-service">
+								<div class="item-service__icon">
+									<img src="img/sevices/carbon_tool-box.svg" alt="Environmental Consulting">
+								</div>
+								<h3 class="item-service__title">
+									Environmental Consulting
+								</h3>
+								<div class="item-service__text">
+									We focus on ergonomics and meeting you where you work. 
+								</div>
+							</div>
+						</div>
+							<div class="services__column">
+								<div class="services__item item-service item-service-middle">
+									<div class="item-service__icon">
+										<img src="img/sevices/ant-design_shop-twotone.svg" alt="Environmental Consulting">
+									</div>
+									<h3 class="item-service__title">
+										Finance and consultancy 
+									</h3>
+									<div class="item-service__text">
+										Just type what's on your mind and we'll get you there.
+									</div>
+								</div>
+							</div>
+							<div class="services__column">
+								<div class="services__item item-service item-service-green">
+									<div class="item-service__icon">
+										<img src="img/sevices/carbon_notebook.svg" alt="Environmental Consulting">
+									</div>
+									<h3 class="item-service__title">
+										Financial Services Consulting
+									</h3>
+									<div class="item-service__text">
+										The quick fox jumps over the lazy dog
+									</div>
+								</div>
+							</div>
+						
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			Footer
