--- a/index.html
+++ b/index.html
@@ -407,9 +407,140 @@
 					</div>
 				</div>
 			</section>
+			<selection class="page__contact contact">
+				<div class="page__container _container">
+					<div class="contact__body">
+						<div class="contact__content">
+							<h4 class="contact__title">
+								Consulting Agency For Your Business
+							</h4>
+							<div class="contact__text">
+								the quick fox jumps over the lazy dog
+							</div>
+						</div>
+						<a href="" class="contact__button">Contact Us</a>
+					</div>
+				</div>
+			</selection>
 		</main>
 		<footer class="footer">
-			Footer
+			<div class="footer__top">
+				<div class="footer__main _container">
+					<div class="footer__column">
+						<div class="footer__label">Company Info</div>
+						<nav class="footer__menu menu-footer">
+							<ul class="menu-footer__list">
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">About Us</a>
+								</li>
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">Carrier</a>
+								</li>
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">We are hiring</a>
+								</li>
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">Blog</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+					<div class="footer__column">
+						<div class="footer__label">Legal</div>
+						<nav class="footer__menu menu-footer">
+							<ul class="menu-footer__list">
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">About Us</a>
+								</li>
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">Carrier</a>
+								</li>
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">We are hiring</a>
+								</li>
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">Blog</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+					<div class="footer__column">
+						<div class="footer__label">Features</div>
+						<nav class="footer__menu menu-footer">
+							<ul class="menu-footer__list">
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">Business Marketing</a>
+								</li>
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">User Analytic</a>
+								</li>
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">Live Chat</a>
+								</li>
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">Unlimited Support</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+					<div class="footer__column">
+						<div class="footer__label">Resources</div>
+						<nav class="footer__menu menu-footer">
+							<ul class="menu-footer__list">
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">IOS & Android</a>
+								</li>
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">Watch a Demo</a>
+								</li>
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">Customers</a>
+								</li>
+								<li class="menu-footer__item">
+									<a href="" class="menu-footer__link">API</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+					<div class="footer__column">
+						<div class="footer__label">Get In Touch</div>
+						<div class="footer__contact contact-footer">
+							<a href="tel:4805550103" class="contact-footer__item contact-footer__item-phone">
+								(480) 555-0103
+							</a>
+							<a href="#" class="contact-footer__item contact-footer__item-map">
+								4517 Washington Ave. Manchester, Kentucky 39495
+							</a>
+							<a href="mailto:debra.holt@example.com" class="contact-footer__item contact-footer__item-email">
+								debra.holt@example.com
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="footer__bottom">
+				<div class="footer__container _container">
+					<div class="footer__copy">
+						Made With Love By Figmaland All Right Reserved 
+					</div>
+					<div class="footer__social social">
+						<div class="social__items">
+							<a href="#" class="social__item">
+								<img src="img/footer/underfooter/01.svg" alt="social">
+							</a>
+							<a href="#" class="social__item">
+								<img src="img/footer/underfooter/02.svg" alt="social">
+							</a>
+							<a href="#" class="social__item">
+								<img src="img/footer/underfooter/03.svg" alt="social">
+							</a>
+							<a href="#" class="social__item">
+								<img src="img/footer/underfooter/04.svg" alt="social">
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</footer>
 	</div>
 	<script src="js/script.js"></script>
